försöker aktivera bara recept på svenska-knappen

--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
         async function loadData() {
             const apiKey = 'AIzaSyBFecFz9KFsPnw6bjAKv0N0CSbs3Iszlag';
             const spreadsheetId = '1RN9SQRzletJnH8BAgJEQCI0BtbpsHQU6Pv2L4FDGXEM';
-            const range = 'Blad1!A1:G'; // Uppdatera för att inkludera alla kolumner upp till 'F'
+            const range = 'Blad1!A1:H'; // Uppdatera för att inkludera alla kolumner upp till 'F'
             const url = `https://sheets.googleapis.com/v4/spreadsheets/${spreadsheetId}/values/${range}?key=${apiKey}`;
             try {
                 const response = await fetch(url);
