--- a/index.html
+++ b/index.html
@@ -514,24 +514,23 @@
                 const input = this.value.trim().toLowerCase();
                 let foundMatch = false;
 
+                console.log('Söker efter:', input); // Lägg till detta för att se den exakta söksträngen
+
                 for (let row of allData) {
                     const matrattNamn = row[0].toLowerCase().trim();
                     const alternativaNamn = row[2] ? row[2].split(',').map(name => name.trim().toLowerCase()) : [];
 
-                    console.log(`Maträtt: ${matrattNamn}, Alternativa Namn: ${alternativaNamn}, Input: ${input}`);
+                    console.log('Maträtt:', matrattNamn, 'Alternativa Namn:', alternativaNamn); // Detta visar värdena som jämförs
 
                     if (input === matrattNamn || alternativaNamn.includes(input)) {
-                        console.log(`Match found for: ${input}`);
                         foundMatch = true;
                         break;
                     }
                 }
 
                 if (foundMatch) {
-                    console.log(`Performing search for: ${input}`);
                     performSearch();
                 } else {
-                    console.log(`No match found, adding tag for: ${input}`);
                     if (input && !selectedTags.includes(input)) {
                         selectedTags.push(input);
                         updateTagContainer();
@@ -541,6 +540,7 @@
                 this.value = '';
             }
         });
+
 
 
 
