--- a/index.html
+++ b/index.html
@@ -452,64 +452,70 @@
     </div>
 
     <script>
-        let allData = [];
-        let selectedTags = [];
-        let isVegFilterActive = false;
-        let isLangFilterActive = false;
-        let ingredientSynonyms = {};
+       let allData = [];
+let selectedTags = [];
+let isVegFilterActive = false;
+let isLangFilterActive = false;
+let ingredientSynonyms = {};
 
-        async function loadData() {
-            const apiKey = 'AIzaSyBFecFz9KFsPnw6bjAKv0N0CSbs3Iszlag';
-            const spreadsheetId = '1RN9SQRzletJnH8BAgJEQCI0BtbpsHQU6Pv2L4FDGXEM';
-            const range = 'Blad1!A1:J'; // Updated to include columns I and J
-            const url = `https://sheets.googleapis.com/v4/spreadsheets/${spreadsheetId}/values/${range}?key=${apiKey}`;
+async function loadData() {
+    const apiKey = 'AIzaSyBFecFz9KFsPnw6bjAKv0N0CSbs3Iszlag';
+    const spreadsheetId = '1RN9SQRzletJnH8BAgJEQCI0BtbpsHQU6Pv2L4FDGXEM';
+    const range = 'Blad1!A1:J'; // Updated to include columns I and J
+    const url = `https://sheets.googleapis.com/v4/spreadsheets/${spreadsheetId}/values/${range}?key=${apiKey}`;
 
-            try {
-                const response = await fetch(url);
-                const data = await response.json();
-                allData = data.values.slice(1); // Ignores the first row (headers)
+    try {
+        const response = await fetch(url);
+        const data = await response.json();
+        allData = data.values.slice(1); // Ignores the first row (headers)
 
-                // Create a mapping for synonyms
-                allData.forEach(row => {
-                    // Check that we have a defined ingredient in column I (index 8)
-                    if (row[8]) {
-                        const ingredient = row[8].toLowerCase().trim();
-                        // Create an array for synonyms only if column J (index 9) has a value
-                        const synonyms = row[9] ? row[9].toLowerCase().split(',').map(s => s.trim()) : [];
-                        ingredientSynonyms[ingredient] = synonyms;
-                    }
-                });
-                console.log('Synonyms loaded:', ingredientSynonyms);
-            } catch (error) {
-                console.error('Error fetching data:', error);
+        // Create a mapping for synonyms
+        allData.forEach(row => {
+            // Check that we have a defined ingredient in column I (index 8)
+            if (row[8]) {
+                const ingredient = row[8].toLowerCase().trim();
+                // Create an array for synonyms only if column J (index 9) has a value
+                const synonyms = row[9] ? row[9].toLowerCase().split(',').map(s => s.trim()) : [];
+                ingredientSynonyms[ingredient] = synonyms;
             }
-        }
+        });
+        console.log('Synonyms loaded:', ingredientSynonyms);
+    } catch (error) {
+        console.error('Error fetching data:', error);
+    }
+}
 
         function performSearch() {
             let searchTerm = document.getElementById('searchInput').value.toLowerCase();
-
-            // Omvandla söktermen till den primära ingrediensen om den är en synonym
-            let primaryIngredient = Object.keys(ingredientSynonyms).find(key => ingredientSynonyms[key].includes(searchTerm)) || searchTerm;
-
             let filteredData = allData.filter(row => {
-                // Kolla om maträtten matchar söktermen
-                const matrattMatch = row[0].toLowerCase().includes(primaryIngredient);
+                const matrattMatch = row[0].toLowerCase().includes(searchTerm);
+                const alternativaMatrattNamnMatch = row[2].toLowerCase().split(',').includes(searchTerm);
 
-                // Kolla om någon av ingredienserna i maträtten matchar den primära ingrediensen
-                const ingredienserMatch = row[1].toLowerCase().split(',').map(ing => ing.trim()).includes(primaryIngredient);
+                const ingredienser = row[1].toLowerCase().split(',').map(ing => ing.trim());
+                const ingredienserMatch = ingredienser.some(ing => {
+                    return ing === searchTerm || (ingredientSynonyms[ing] && ingredientSynonyms[ing].includes(searchTerm));
+                });
 
-                return matrattMatch || ingredienserMatch;
+                return matrattMatch || alternativaMatrattNamnMatch || ingredienserMatch;
             });
 
-            // Dina ytterligare filter här...
+            // Filtrera baserat på taggar
             if (selectedTags.length > 0) {
-                filteredData = filteredData.filter(row => selectedTags.every(tag => row[1].toLowerCase().split(',').map(ing => ing.trim()).includes(tag)));
+                filteredData = filteredData.filter(row => selectedTags.every(tag => row[1] && row[1].toLowerCase().includes(tag.toLowerCase())));
             }
+            // Filtrera baserat på söktermen
+            else if (searchTerm) {
+                filteredData = filteredData.filter(row => (row[0] && row[0].toLowerCase().includes(searchTerm)) || (row[1] && row[1].toLowerCase().includes(searchTerm)));
+            }
+
+            // Filtrera för vegetariska rätter
             if (isVegFilterActive) {
-                filteredData = filteredData.filter(row => row[6].toLowerCase() === 'ja');
+                filteredData = filteredData.filter(row => row[6] && row[6].toLowerCase().includes('ja'));
             }
+
+            // Filtrera för recept på svenska
             if (isLangFilterActive) {
-                filteredData = filteredData.filter(row => row[7].toLowerCase() === 'ja');
+                filteredData = filteredData.filter(row => row[7] && row[7].toLowerCase().includes('ja'));
             }
 
             displayData(filteredData);
